--- a/composer.json
+++ b/composer.json
@@ -62,7 +62,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Phpdocx\\": "storage/app/phpdocx/classes/"
         },
         "classmap": [
             "database/seeds",
